// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the H1 component should accept additional props 1`] = `
<Text
  accessible={false}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#303030",
      "fontFamily": "OpenSans-Bold",
      "fontSize": 52.2,
      "lineHeight": 54.81,
    }
  }
>
  "Do all the good you can. By all the means you can. In all the ways you can. In all theplaces you can. At all the times you can. To all the people you can. As long as ever you can." ― John Wesley
</Text>
`;

exports[`the H1 component should accept and render passed in styles 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "salmon",
      "fontFamily": "OpenSans-Bold",
      "fontSize": 52.2,
      "lineHeight": 54.81,
    }
  }
>
  Salmon text
</Text>
`;

exports[`the H1 component should render a loading state 1`] = `
<View
  style={
    Object {
      "alignSelf": "stretch",
      "backgroundColor": "#A5A5A5",
      "borderRadius": 6,
      "height": 52.2,
      "marginVertical": 1.3049999999999997,
      "width": "100%",
    }
  }
/>
`;

exports[`the H1 component should render correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#303030",
      "fontFamily": "OpenSans-Bold",
      "fontSize": 52.2,
      "lineHeight": 54.81,
    }
  }
>
  Default H1 text
</Text>
`;
